fix table overflow

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -298,3 +298,7 @@ b.conum:after, .colist>ol>li:before
 
 .quoteblock blockquote:before
   font-family: "Noto Serif", "DejaVu Serif", serif
+
+table.tableblock
+  overflow: auto
+  display: block
